--- a/1-home.html
+++ b/1-home.html
@@ -4,6 +4,27 @@
     <meta charset="utf-8">
     <title>Welcome</title>
 
+    <style>
+      body
+      {
+        margin:0px;
+      }
+      a
+      {
+        color:black;
+        text-decoration:none;
+      }
+      h1
+      {
+        font-size:100px;
+        text-align:center;
+        border-bottom:1px solid gray;
+        margin:0px;
+        padding:20px;
+      }
+
+    </style>
+
   </head>
   <body>
     <h1><a href="#">Home</a></h1>
@@ -16,19 +37,21 @@
 
     <h2>Programming Language</h2>
 
+    <img src="1.jpg" width="300px" height="250px">
+
     <p>
     programming language is a formal language, which comprises a set of instructions used to produce various kinds of output. Programming languages are used in computer programming to create programs that implement specific algorithms.
     </p>
 
-    <p>
+    <p style="margin-top:50px">
     Most programming languages consist of instructions for computers, although there are programmable machines that use a limited set of specific instructions, rather than the general programming languages of modern computers. Early ones preceded the invention of the digital computer, the first probably being the automatic flute player described in the 9th century by the brothers Musa in Baghdad, during the Islamic Golden Age.[1] From the early 1800s, programs were used to direct the behavior of machines such as Jacquard looms, music boxes and player pianos.[2] However, their programs (such as a player piano's scrolls) could not produce different behavior in response to some input or condition.
     </p>
 
-    <p>
+    <p style="margin-top:50px">
     Thousands of different programming languages have been created, mainly in the computer field, and many more still are being created every year. Many programming languages require computation to be specified in an imperative form (i.e., as a sequence of operations to perform) while other languages use other forms of program specification such as the declarative form (i.e. the desired result is specified, not how to achieve it).
     </p>
 
-    <p>
+    <p style="margin-top:50px">
     The description of a programming language is usually split into the two components of syntax (form) and semantics (meaning). Some languages are defined by a specification document (for example, the C programming language is specified by an ISO Standard) while other languages (such as Perl) have a dominant implementation that is treated as a reference. Some languages have both, with the basic language defined by a standard and extensions taken from the dominant implementation being common.
     </p>
   </body>
