finish css which I learned - 2018/12/11

--- a/3-java.html
+++ b/3-java.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Java</title>
-
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="1-home.html">Home</a></h1>
 
-    <ol>
-      <li><a href="2-C++.html">C++</a></li>
-      <li><a href="3-java.html">Java</a></li>
-      <li><a href="4-python.html">Python</a></li>
-    </ol>
+    <div id="grid">
+      <ol>
+        <li><a href="2-C++.html">C++</a></li>
+        <li><a href="3-java.html">Java</a></li>
+        <li><a href="4-python.html">Python</a></li>
+      </ol>
 
-    <h2>Java</h2>
+      <div id="article">
+        <h2>Java</h2>
 
-    <img src="3.png" width="300px" height="250px">
+        <img src="3.png" width="300px" height="250px">
 
-    <p style="margin-top:50px">
-      썬 마이크로시스템즈에서 1995년에 개발한 객체 지향 프로그래밍 언어. 창시자는 제임스 고슬링이다. 2010년에 썬이 오라클에 인수되어서 현재 Java의 저작권자는 오라클이다. 단, 2017년 9월부로 Java EE에 한해 이클립스 재단이 소유권을 가지게 되었다.
-    </p>
-
+        <p style="margin-top:50px">
+          썬 마이크로시스템즈에서 1995년에 개발한 객체 지향 프로그래밍 언어. 창시자는 제임스 고슬링이다. 2010년에 썬이 오라클에 인수되어서 현재 Java의 저작권자는 오라클이다. 단, 2017년 9월부로 Java EE에 한해 이클립스 재단이 소유권을 가지게 되었다.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
