--- a/1-home.html
+++ b/1-home.html
@@ -4,79 +4,7 @@
     <meta charset="utf-8">
     <title>Welcome</title>
 
-    <style>
-      body
-      {
-        margin:0px;
-      }
-      a
-      {
-        color:black;
-        text-decoration:none;
-      }
-      h1
-      {
-        font-size:100px;
-        text-align:center;
-        border-bottom:1px solid gray;
-        margin:0px;
-        padding:20px;
-      }
-      ol
-      {
-        border-right: 1px solid gray;
-        margin:0px;
-        padding-left: 33px;
-        padding-top: 20px;
-      }
-      h2
-      {
-        font-size: 30px
-      }
-      p
-      {
-        font-size: 15px;
-      }
-      li
-      {
-        font-size: 20px;
-      }
-      #grid
-      {
-        display: grid;
-        grid-template-columns: 150px 1fr;
-      }
-      #article
-      {
-        padding-left: 20px;
-        padding-right:20px;
-        padding-bottom: 20px;
-      }
-      @media(max-width:800px)
-      {
-        #grid
-        {
-          display: block;
-        }
-        h1
-        {
-          border: none;
-        }
-        ol
-        {
-          border: none;
-        }
-      }
-      @media (max-width:600px)
-      {
-        body
-        {
-          background-color:coral;
-        }
-      }
-
-    </style>
-
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="#">Home</a></h1>
