--- a/4-python.html
+++ b/4-python.html
@@ -3,35 +3,39 @@
   <head>
     <meta charset="utf-8">
     <title>Python</title>
-
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1><a href="1-home.html">Home</a></h1>
 
-    <ol>
-      <li><a href="2-C++.html">C++</a></li>
-      <li><a href="3-java.html">Java</a></li>
-      <li><a href="4-python.html">Python</a></li>
-    </ol>
+    <div id="grid">
+      <ol>
+        <li><a href="2-C++.html">C++</a></li>
+        <li><a href="3-java.html">Java</a></li>
+        <li><a href="4-python.html">Python</a></li>
+      </ol>
 
-    <h2>Python</h2>
+      <div id="article">
+        <h2>Python</h2>
 
-    <img src="4.png" width="300px" height="250px">
+        <img src="4.png" width="300px" height="250px">
 
-    <p>
-    1991년에 발표된 인터프리터 방식[2]의 프로그래밍 언어. 공식 홈페이지 공식 깃헙 저장소
-    </p>
+        <p>
+        1991년에 발표된 인터프리터 방식[2]의 프로그래밍 언어. 공식 홈페이지 공식 깃헙 저장소
+        </p>
 
-    <p style="margin-top:50px">
-    창시자는 귀도 반 로섬(Guido van Rossum). 네덜란드어 발음으로 '히도 판 로쉼'. 1989년 크리스마스 주에, 연구실이 닫혀있어서 심심한 김에 만들었다. 파이썬 서문과 마이크로소프트웨어와 한 인터뷰를 보면 알겠지만 사실이다. 기술자들은 심심할 때 항상 걸작이 나온다. 2000년에는 Python 2, 2008년에는 Python 3가 나왔다.
-    </p>
+        <p style="margin-top:50px">
+        창시자는 귀도 반 로섬(Guido van Rossum). 네덜란드어 발음으로 '히도 판 로쉼'. 1989년 크리스마스 주에, 연구실이 닫혀있어서 심심한 김에 만들었다. 파이썬 서문과 마이크로소프트웨어와 한 인터뷰를 보면 알겠지만 사실이다. 기술자들은 심심할 때 항상 걸작이 나온다. 2000년에는 Python 2, 2008년에는 Python 3가 나왔다.
+        </p>
 
-    <p style="margin-top:50px">
-    이름은 귀도가 즐겨 보던 영국의 6인조 코미디 그룹 몬티 파이선에서 따왔다고 한다. 지금 CPython 공식 GitHub 저장소를 보면 협업보조용 봇 이름들이 the-knights-who-say-ni나 bedevere 같이 죄다 몬티 파이선과 성배의 배역들이다. 많은 파이썬 교재들에서 변수 이름을 spam, eggs로 짓는 등 드립을 친다. 직접적 관계는 없지만 42도 필수요소. 물론 사전적 의미를 생각 안 하는 건 아니라서 심볼마크가 뱀 모양이다.
-    </p>
+        <p style="margin-top:50px">
+        이름은 귀도가 즐겨 보던 영국의 6인조 코미디 그룹 몬티 파이선에서 따왔다고 한다. 지금 CPython 공식 GitHub 저장소를 보면 협업보조용 봇 이름들이 the-knights-who-say-ni나 bedevere 같이 죄다 몬티 파이선과 성배의 배역들이다. 많은 파이썬 교재들에서 변수 이름을 spam, eggs로 짓는 등 드립을 친다. 직접적 관계는 없지만 42도 필수요소. 물론 사전적 의미를 생각 안 하는 건 아니라서 심볼마크가 뱀 모양이다.
+        </p>
 
-    <p style="margin-top:50px">
-    문법이 매우 쉬워서 초보자들이 처음 프로그래밍을 배울 때 추천되는 언어이다. 오죽하면 파이썬의 별명이 '실행할 수 있는 의사코드(Executable pseudocode)'일 정도. 실제로도 미국 공과 대학교에서 컴퓨터 프로그래밍 입문 수업으로 파이썬을 많이 사용하기도 한다. 동시에 실사용률과 생산성도 높은 강력한 언어.
-    </p>
+        <p style="margin-top:50px">
+        문법이 매우 쉬워서 초보자들이 처음 프로그래밍을 배울 때 추천되는 언어이다. 오죽하면 파이썬의 별명이 '실행할 수 있는 의사코드(Executable pseudocode)'일 정도. 실제로도 미국 공과 대학교에서 컴퓨터 프로그래밍 입문 수업으로 파이썬을 많이 사용하기도 한다. 동시에 실사용률과 생산성도 높은 강력한 언어.
+        </p>
+      </div>
+    </div>
   </body>
 </html>
