--- a/2-C++.html
+++ b/2-C++.html
@@ -20,7 +20,7 @@
       <div id="article">
         <h2>C++</h2>
 
-        <img src="2.png" width="300px" height="250px">
+        <img src="2.png">
 
         <p>
         1979년, 덴마크의 컴퓨터 과학자 비야네 스트롭스트룹은 C++의 선구자격 언어인 "C with Classes" 작업에 착수하였다.[1] 새로운 언어를 만들려는 의의는 박사 논문을 위한 스트롭스트룹의 프로그래밍 경험에서 비롯되었다.
