--- a/3-java.html
+++ b/3-java.html
@@ -18,7 +18,7 @@
       <div id="article">
         <h2>Java</h2>
 
-        <img src="3.png" width="300px" height="250px">
+        <img src="3.png">
 
         <p style="margin-top:50px">
           썬 마이크로시스템즈에서 1995년에 개발한 객체 지향 프로그래밍 언어. 창시자는 제임스 고슬링이다. 2010년에 썬이 오라클에 인수되어서 현재 Java의 저작권자는 오라클이다. 단, 2017년 9월부로 Java EE에 한해 이클립스 재단이 소유권을 가지게 되었다.
