--- a/4-python.html
+++ b/4-python.html
@@ -18,7 +18,7 @@
       <div id="article">
         <h2>Python</h2>
 
-        <img src="4.png" width="300px" height="250px">
+        <img src="4.png">
 
         <p>
         1991년에 발표된 인터프리터 방식[2]의 프로그래밍 언어. 공식 홈페이지 공식 깃헙 저장소
